--- a/rom/boot/Makefile
+++ b/rom/boot/Makefile
@@ -1,5 +1,5 @@
-CA65=/usr/bin/ca65
-LD65=/usr/bin/ld65
+CA65=ca65
+LD65=ld65
 
 all: boot.bin generated/rom_defs.o
 
@@ -23,7 +23,7 @@ generated/rom_defs.o: generated/rom_defs.s
 		boot.s
 
 generated/rom_defs.s: boot.dbg
-	python3 generated/generate_rom_defs.py
+	python generated/generate_rom_defs.py
 
 clean:
 	rm -f boot.o boot.bin boot.dbg generated/rom_defs.s generated/rom_defs.o
